<resources>
    <string name="app_name">CurrencyList</string>
    <string name="clear_list">Clear list</string>
    <string name="add_instrument">Add instrument</string>
    <string name="to_crypto">To Crypto</string>
    <string name="to_fiat">To Fiat</string>
    <string name="show_all">Show all</string>
    <string name="search_hint">Search</string>
    <string name="no_result">No Result</string>
    <string name="try_recommendation">Try \"%s\"</string>
    <string name="til_id">ID</string>
    <string name="til_name">Name</string>
    <string name="til_code">Code</string>
    <string name="til_symbol">Symbol</string>
    <string name="send">Send</string>
</resources>