<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_clear_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_instrument"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_instrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_instrument"
            app:layout_constraintStart_toEndOf="@+id/btn_clear_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_to_crypto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_crypto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/to_fiat"
            app:layout_constraintTop_toBottomOf="@+id/btn_clear_list"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/to_fiat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_fiat"
            app:layout_constraintStart_toEndOf="@+id/btn_to_crypto"
            app:layout_constraintEnd_toStartOf="@+id/btn_show_all"
            app:layout_constraintTop_toBottomOf="@+id/btn_clear_list"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_show_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_all"
            app:layout_constraintStart_toEndOf="@+id/to_fiat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_clear_list"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</LinearLayout>